--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "genv"
+name = "app"
 version = "0.1.0"
 edition = "2021"
 
@@ -38,17 +38,3 @@ num-traits = "^0.2"
 reqwest = { version = "0.11", features = ["json"] }
 csv = "1.1"
 error-chain = "0.12"
-[dev-dependencies]
-criterion = "0.3"
-
-
-assert_approx_eq = "1.1"
-
-bencher = "0.1"
-rand = "0.7"
-json = "0.12"
-lazy_static = "1.4"
-rspec = "0.1"
-# cucumber = { package = "cucumber_rust", version = "^0.6.0" }
-cucumber_rust = "0.6"
-# cucumber = "0.3.1"
