--- a/pine/Cargo.toml
+++ b/pine/Cargo.toml
@@ -13,9 +13,10 @@ assert_matches = "1.3"
 serde = "^1.0.104"
 serde_derive = "^1.0.104"
 chrono = "^0.4"
-chrono-tz = "^0.4"
+ 
 regex = "^1"
 num-traits = "^0.2"
+chrono-tz = "0.8.1"
 
 [dev-dependencies]
 criterion = "0.3"
